# freqtrade_demo

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  config.json  config.optimize.json  in-memoria.db  knn_window_features.py  mkdocs.yml  mypy.ini  pyproject.toml  pyproject.toml.optimized  requirements.txt  test_1m_features.py  test_features_with_trend.py  test_ofi_logic.py  test_prediction_windows.py  verify_all_features.py  verify_label_design.py  verify_money_flow_method.py  verify_ofi_calculation.py
.claude/: CONVENTIONS.md  settings.local.json
.serena/: project.yml
03_integration/: data_pipeline.py  factor_validator.py
04_shared/: config_schema.py
configs/: README.md  config-private.example.json  config.example.json  pairs_compounder_top10.txt  pairs_moonshot_top36.txt
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEEP_CLEANUP_REPORT.md  FACTORS.md  IMPROVEMENT_CHECKLIST.md  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  arc_cache_eviction_design.md  automated_benchmarking_design.md  config_management_design.md  data_prefetching_design.md  error_handling_design.md  factor_dependency_graph_design.md  incremental_computation_design.md  integration_example.md  memory_pool_design.md  new_features.md  optimization_usage_guide.md  performance_analysis_report.md  performance_monitoring_design.md  smart_prefetch_design.md
examples/: integration_config.json  integration_example.py
experiments/: README.md
freqaimodels/: README.md
freqtrade_book/: AGENTS.md  README.zh-CN.md  SUMMARY.zh-CN.md
freqtrade_docs/: AGENTS.md  advanced_setup.zh-CN.md  backtest_glossary.zh-CN.md  backtesting.zh-CN.md  bot_usage.zh-CN.md  data_analysis.zh-CN.md  developer.zh-CN.md  (+20 more)
(+919 files in other folders)
