[project]
name = "freqtrade-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "freqtrade[freqai,hyperopt]",
    "nbformat>=4.2.0",
    "numpy>=2.0.0,<2.4.0",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "alphalens-reloaded>=0.4.6",
    "empyrical-reloaded>=0.5.12",
    "pydantic>=2.0.0",
]

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
freqtrade = { git = "https://github.com/freqtrade/freqtrade.git", rev = "8e91fea11f3cc0354b952a5b667628b18378c7fe" }

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets>=8.1.8",
    "plotly",
    "pytest>=9.0.2",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
pythonpath = ["03_integration"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 运行时间较长的测试",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "03_integration"
